<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pybricks_ros2</name>
  <version>1.0.0</version>
  <description>This package provides a connector node for the pybricks-driver executable and some demo robot nodes using pybricks prime hub</description>
  <maintainer email="jory.lafaye@gmail.com">Jory Lafaye</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>urdf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>pybricks-driver</depend>
  <depend>pybricks_ros2_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
