<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pybricks_ros2_interfaces</name>
  <version>1.0.0</version>
  <description>This package provides interfaces classes for the node communicaiton messages</description>
  <maintainer email="jory.lafaye@gmail.com">Jory Lafaye</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
